--- a/Modulo - 1/repaso/index.html
+++ b/Modulo - 1/repaso/index.html
@@ -9,6 +9,6 @@
      <h1>Introduccion / Recordatorio JavaScript</h1>
      <div id="app"></div>
      
-     <script src="js/app.js"></script>  
+     <script src="js/app.js" type="module"></script>  
 </body>
 </html>
